2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/writer.c (io_buffer_flush): New
	function.
	(io_buffer_append): Likewise.
	(write): Don't use rm_putchar but the new functions.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/gettimeofdayr.c: Include
	<l4/schedule.h>.
	(gettimeofday): Use l4_system_clock to get basic time information.

2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am ($(srcdir)/newlib/patch.stamp): Remove ``PACKAGE_*''
	definitions from `newlib/newlib/newlib.hin'.

2008-05-30  Thomas Schwinge  <tschwinge@gnu.org>

	* README: No more ``--enable-maintainer-mode'' in the top-level.

	* Makefile.am (newlib-build/build.stamp, newlib-build/install.stamp):
	New targets.  Used to decouple ``make install'' from ``make all''.

	* patches/04-newlib-newlib-configure-ac.patch: Don't conceal errors.

	* Makefile.am ($(addprefix $(srcdir)/newlib/, $(addon))): Touch the
	destination file after linking.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: New file.
	* Makefile.am: Include `Makefoo.am'.
	(patch_files): Remove `00-newlib-configure-ac.patch'.
	(abs_top_builddir, abs_srcdir, abs_top_srcdir): Don't define.
	(newlib/patch.stamp): Link to main config.guess, config.sub.
	(newlib-build/configure.stamp): Configure for building with cross
	compiler.
	* patches/00-newlib-configure-ac.patch: Remove.

	* Makefile.am: Rework stamp-tracking system.

	* addon/newlib/libc/sys/hurd/configure: Remove file.
	* addon/newlib/libc/sys/hurd/Makefile.in: Likewise.
	* addon/newlib/libc/sys/hurd/aclocal.m4: Likewise.
	* Makefile.am (addon): Adapt.

2008-03-01  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (addon): Add newlib/libc/sys/hurd/include/signal.h.
	* patches/03-newlib-newlib-configure-host.patch: Add
	-DSIGNAL_PROVIDED to newlib_cflags.
	* patches/05-newlib-newlib-libc-include-machine-setjmp-h.patch:
	Correctly calcualtesigjmp_buf.